foolish/foolish-core/src/snapshots/foolish_core__approval_tests__zeroDivisionIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {10 / 0;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(/) [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(0) [INDEPENDENT]
RESULT:
Brane [NK]
  ??? (division by zero) [NK]
