foolish/foolish-core/src/snapshots/foolish_core__approval_tests__zero_division.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 X9DbeB+/ur/elQirx/n70eRAqjjBxnoo8kWgp0AvtPg/cSPSe7CUVaiS2ZfFfBD14dGXfvdK9R0b2ChKPHmUCw==
INPUT: {10 / 0;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(/) [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(0) [INDEPENDENT]
RESULT:
Brane [NK]
  ??? (division by zero) [NK]
